v5.3.0.0
- Fixed a massive memory leak with level unloading.
- Fixed leaving a channel name black in the IRC settings causing a crash.
- Fixed /spheroid being lopsided with even numbers.
- Fixed the update checker so it only updates if there actually is an update.
- Added option for WoM Direct heartbeat.
- Added commands:
	- /nyan - 100% self-explanatory!
- Made improvements to leaf decay, should be more random now.
- Disabled color codes in Global Chat, it's just too risky with the exploits.

v5.2.0.0
- Fixed the server-breaking freeze bug that happened when a player lagged (NOT logged) out.
- Fixed several possible memory leaks.
- Fixed /moveall and /map in the console.
- Fixed /click for guests.
- Fixed /pyramid so it respects block limits.
- Fixed /unload empty.
- Fixed /hide and /xhide to use custom login/logout messages.
- Fixed /renamelvl so it renames backups, and won't error if MySQL is disabled.
- Fixed /resetbot so it no longer derps like Derpy Hooves in the server console.
- Fixed /draw so it respects cuboid limits.
- Fixed /economy.
- Fixed level property file saving, it was breaking on certain maps.
- Fixed in-game messages from the console so they have proper coloring again.
- Fixed the player and map lists in the GUI not updating.
- Fixed all the color code exploits which crash clients... hopefully.
- Fixed GUI so if a box is left empty in the create level (not including seed) it no longer crashes.
- Fixed newly "opped" (can break adminium) players having to rejoin before they can actually break adminium.
- Fixed dirt changing into grass when it shouldn't on physics 0.
- Fixed the "Too many connections!" error that would require a restart.
- Fixed a few bugs in Zombie Survival.
- Fixed being unable to set the lowest rank for any blocks after obsidian in the GUI.
- Fixed the duplicate "death count" option in the GUI.
- Added global chat, which allows you to chat with other servers! Can be disabled in the properties.