@@ -27,7 +27,7 @@ namespace MCForge
     {
         public override string name { get { return "ctf"; } }
         public override string shortcut { get { return ""; } }
-        public override string type { get { return "games"; } }
+        public override string type { get { return "other"; } }
         public override bool museumUsable { get { return false; } }
         public override LevelPermission defaultRank { get { return LevelPermission.Operator; } }
         public CmdCTF() { }
