@@ -80,6 +80,7 @@ namespace MCForge
             all.Add(new CmdCopyLVL());
 			all.Add(new CmdCountdown());
             all.Add(new CmdCrashServer());
+            all.Add(new CmdCTF());
             all.Add(new CmdCuboid());
             all.Add(new CmdDelete());
             all.Add(new CmdDeleteLvl());
